# robothon-2023-board-description

./: CMakeLists.txt  README.md  package.xml
launch/: task_board.launch  voltmeter_circuit.launch
robots/: task_board.urdf.xacro  voltmeter_circuit.urdf.xacro
rviz/: task_board.rviz  voltmeter_circuit.rviz
urdf/: task_board.gazebo.xacro  task_board.urdf.xacro  voltmeter_circuit.gazebo.xacro  voltmeter_circuit.urdf.xacro
